# narrows

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
doc/: Motivation.md
include/narrows/: bounded.hpp  concepts.hpp  single_bounded.hpp  unbounded.hpp
include/narrows/__internal/: __channel.hpp
include/narrows/_internal/: _channel.hpp  _errors.hpp  _multi_channel.hpp
tests/: CMakeLists.txt  bounded.cpp  single_bounded.cpp  test.cpp
